@@ -1,27 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST qross-0.2.2.tar.bz2 3099984 SHA256 02792ba25bdef11b444ca1d0b9f53fdd9aac9539307deb689b585967391a7c7b SHA512 b1c6a0af64651cd16985a81e9613e8a21c0e0a42999e0d4656a40aa21864d52f815e3825eec577fa9856146e12413a70edcf9a85f8a5fb094b6b7b7ff031a0fa WHIRLPOOL fd1714f4a2825ea304945353d3e808e0056b4374d8c575f49ead11c5577095dc0c5066fbf40d5e3fe0f30a107c968bce5bf59c2815e05ccff526a78722b9f13e
 DIST qrosscore-0.3.1.tar.gz 3963408 SHA256 0573ece8c78fc836544a87adbb3a61afb1b8821cc11b289935d4b650c2d6bc85 SHA512 0dba2257a18ad36ec5348dc9a298d264f5d3ca1cd08e1bfce50259da85ccf3ebec9bad5e578b99e870948888789e76ce33cc8aaf7538c7da6a732a5c76630be6 WHIRLPOOL ef1c9a6fa7fad7a49c9237ed47bc2e7694d1c89639e62bfcd21c5d253ab40147c8694546db778ed6a16ca06e08a551b5a7a5aacbcc192659291846d87df313d0
-EBUILD qrosscore-0.2.2.ebuild 644 SHA256 92f1742ca981bbcada98dbc0b8b1e707401dbf98e1ca03c5c8fa4f6729a712b3 SHA512 8bac5a74287306ccb4b4eb33b3f522dc654398f2bfad63de43dd0fe3e223a1b4dccb3d04081d6590d0653519fcb92d4397f0513d7305d36a5f2107109a13096d WHIRLPOOL e854f99c070b46ebb785a3cd16ee85b126394cb5a3102a83224e005c7c7bac49990e18d5ad3d17ba3e37cdf0cffd7ae0aaefdf6d8d170925ac3f0ca2dda2e320
 EBUILD qrosscore-0.3.1.ebuild 659 SHA256 1ce3e1adabb2eb457f88d95f9583d2c07d4793332b9a329eb1b014e34e2a2394 SHA512 1597f4386f8643d47f52cd50b1d3ccd41fa595cc83f231b1bfcbbf53124527271a8d1cd670881e4bb328003b0460e4a932b75941534546e0e99d1e000471ef07 WHIRLPOOL 93716dcb4fe4e2f5be3263098c24d2a032ad38ec81592984110c3e76bccddf5c5843cd3318ed49cd1693a281f4265369eb57b023d2e4a641bc9aa8604b4b45e9
 EBUILD qrosscore-9999.ebuild 626 SHA256 02186bb7de25556b7568e1ec6629524ddc34c294f82fece52ddd732127434fb1 SHA512 53d0abcb58f4d03d488f059db3d103ef7e682075394865eaf97958818445a23704f2db9e27266193e0aab449201a2511507b3b1dac74b1948c619f18cbba99e7 WHIRLPOOL ca95b0941f5f03e12b5f6e7e15a9ac1923a5e4e7dbee575b82909a9fd5cc26c0e7d607a13d5f075749fb7ec50ab16f4b14e26380fa90419ddc6ed5610fa06784
-MISC ChangeLog 2094 SHA256 8f837b53d3690452833316a346f00dc0c7bbf14f7c8705f5030eab6b7a352693 SHA512 0ca93562d9ea0305f5090c1e4c25ba1dcf2688252d5c49202c2cef39ffacb4302805aab3464d187e9aa1446165d81a5da5646115f89dc8f628df61d5bde3b96f WHIRLPOOL f8b8b92a0ae7ad30c9eac25911d1aa8032d8b6d1e536d9c7a32a3f0271006b8f8ff727c166dd99166fd6fb7bdf5639132f83a347b3cf0e7897d287ae4e7f88c6
+MISC ChangeLog 2197 SHA256 c2b329f44f801e8e2787ac1949d18b686784aee3ad4f611286ffdf95b88ae61c SHA512 497f6135bd3cbf4742e6fc0f217bb4f083cbc359d4f93a3b87b89f3d24648dca0a0f8ab3b9fc468aae46266461cfbefd47fb2b7ebf0d9d965df8ae9dc43b8c00 WHIRLPOOL 0bcbf971d227ad6d0aca0f1da7fbd41389f1070b34cce027bb80c0f6de637741b6fb86451bea1c3bfcf4a2623991bf7b951e4c230dbfdddb213921fdc263fa24
 MISC metadata.xml 254 SHA256 8132644fd44b0a97affa5cf95059bafc359d39aad5afe18a44982e7db21e3da1 SHA512 28c7e63fc4e3475b098cea0f28bd8dbc64819fdc6879e561a90b3931dea8c0b4553cfdd75c53bb3c21472d39a83c3719a0869e97dfc33e8dddc6881170d79aa5 WHIRLPOOL a9c54929759fdef50afde7f52724ce3f00f6a1238be1551635f99fabffa13ce1cb48399357b7e8f0026a693e59e1e72bd10f59cd9f137bd87276dbb460902f61
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJVM3pmAAoJELp701BxlEWfdRgP/iV+JjdQRVpQtxtsyzqJUwfm
-yuVsVxEYoc/HsupmRvRBWDfmbqkcEtJO486CKXuxbwu+ggnp+69gpq72Ylf0O0sa
-oYa7zRG2jDlwTlNAvwxrmrzk0hjdQYdAPEP7QirNyoDLpy2UoZvNG9Fy0Glq1n/i
-3IYeiEpPsQlAt7NWWH9nbYVzYqaCPYJ7bdH1VrOvYuUB5FO4c6IyQMHeOfK47Gws
-f67Jcyg1OXxpzbddjNZmOazZcfZmIkKpi9psIDQ1fLKTiJj4A+8aRR+1j3U9TBbo
-Ig05qABGvzwK8mrmJTlvedpRA6aGCk3eG37jUy8K9AKGIqudQSsek8ST7rjGJNKp
-KjycyoQ5q8wNXgE8/8t//eoPuOj8QnKenFKCpbgtEDENSGT7/7MMz/V4rutEPjbn
-e+75CANLpRI3TC4R0fzwYMSBzbF2Ruh5CqUmRmt00idFVFEVn9TLCs04CCcxtnAk
-H8zRZtuqAqtX2lkqh5i1Km529/z9BgQPgHeIitK1A0QqlAchfgOZVgeQKN1g3Kn0
-fbQVZEoo3pO3AXOx56ILPSZ6szpbF4KSzwC6EEsSJFPQmhfpV0AocFIUxL7cM5uK
-NvIHPs5nuvLNtthiY7eAso1jJMN787hyMakfZjeq4+8jQlVHXEuuFy5dYPNp5ztV
-kKxSINBMPKpiLPd8Qp+W
-=3nhr
+iQJiBAEBCABMBQJVM8r+RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7I7kD/9nUVQuVO1syXKsBA2a/WvPiUKs3g+Hf20a2YzTUuDjqcNSuvHNJsS5immy
+EzNK5UfdX83ft26dnM/PgY4OYM0OhtAzaTDemZvo+JjATV/hKk1NDc3sn3hJCuS+
+OkAkhPWfw936ZKT5cmTGbxwle+NVh0xC5eJh83cX3cPs7zis+Z++K2b0qiB0f+pO
+d1IoFb6DCbE4t88KsCx/HZkEa3KtIHlFrsn5y5RTZ57pnqub61yOQ6cLyfl/p6HB
+il9KodO9UVlHSV6ottyXOEIMLxqTda36wngqUm4xnVGnAtTcRg3vCfeUFVcl3U8F
+pWg/g/c09Ogb21sSHOl7BAVvNulm8CzWxQxzuoAd8sSTHrXC6Uohz5MbbUamA/9N
+m/0PRMBcI+EJDukhRKf6i88rWR/o9Ebsk9yPgtIgWeWXfIkNJWrciHRVO7VONxIi
+gDBzoBFBWutGIXhnKxo71IW5+H0r4c2/DNOPUVPn0kFGxa87QdHtukiRVQc7JyCW
+saPtNvAWj4T2vD2VJNs+0pHKHtM/I7xXFUKP9TpPeyLQAuYZ/UG+lGITK+U9ijmR
+fyrqJZJZ2C+8b492U5CBRuqRB7uXMzTCdRNUPoQEgFu21aH2SXaxbOy9mRrzkpUn
+34MfXupbpCFmD/JnUzXyf9t/Byh07alphaudHb1y8rb91RFP0w==
+=safR
 -----END PGP SIGNATURE-----
