@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/qrosscore
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/qrosscore/ChangeLog,v 1.13 2015/04/19 09:50:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/qrosscore/ChangeLog,v 1.14 2015/04/19 15:34:23 kensington Exp $
+
+  19 Apr 2015; Michael Palimaka <kensington@gentoo.org> -qrosscore-0.2.2.ebuild:
+  Remove old.
 
   19 Apr 2015; Agostino Sarubbo <ago@gentoo.org> qrosscore-0.3.1.ebuild:
   Stable for x86, wrt bug #545524
